--- a/tasks/rpz-scripts.yml
+++ b/tasks/rpz-scripts.yml
@@ -64,7 +64,7 @@
         day: "{{ item.cron.day | default('*') }}"
         month: "{{ item.cron.month | default('*') }}"
         weekday: "{{ item.cron.weekday | default('*') }}"
-        job: "{{ item.cmd }} && RNDC reload {{ item.zone }}"
+        job: "{{ item.cmd }} && rndc reload {{ item.zone }}"
         user: root
       loop: "{{ bind_rpz_update_jobs }}"
 
