--- a/tasks/tls.yml
+++ b/tasks/tls.yml
@@ -1,20 +1,4 @@
 ---
-- name: Create temporary directory for TLS files
-  tags: [tls]
-  ansible.builtin.tempfile:
-    state: directory
-  changed_when: true
-  delegate_to: localhost
-  register: bind_tls_tempdir
-
-- name: Set the permissions so ansible can copy files
-  tags: [tls, privatekey]
-  ansible.builtin.file:
-    mode: "0711"
-    path: "{{ bind_tls_tempdir.path }}"
-    state: directory
-  delegate_to: localhost
-
 - name: Check if dhparam file exists
   tags: [tls, dhparam]
   ansible.builtin.stat:
@@ -24,87 +8,40 @@
 
 - name: Generate DH param file
   tags: [tls, dhparam]
-  when:
-    - bind_tls_dhparam_file is defined
-    - not bind_tls_dhparam_file_stat.stat.exists
-  block:
-    - name: Generate DH params
-      community.crypto.openssl_dhparam:
-        path: "{{ bind_tls_tempdir.path }}/dhparam.pem"
-        size: "{{ bind_tls_dhparam_size }}"
-      delegate_to: localhost
-
-    - name: Copy dhparam file to target
-      ansible.builtin.copy:
-        src: "{{ bind_tls_tempdir.path }}/dhparam.pem"
-        dest: "{{ bind_tls_dhparam_file }}"
-        mode: "0644"
+  community.crypto.openssl_dhparam:
+    path: "{{ bind_tls_dhparam_file }}"
+    size: "{{ bind_tls_dhparam_size }}"
 
 - name: Check for an existing private key files
   tags: [tls, privatekey]
   ansible.builtin.stat:
-    path: "{{ item.key_file }}"
+    path: "{{ item.key_file | default(bind_tls_key_file) }}"
   register: bind_tls_key_file_stat
   loop: "{{ bind_tls }}"
-
-- name: Use the existing private key
-  tags: [tls, privatekey]
-  when: bind_tls_key_file_stat.results[index].stat.exists
-  block:
-    - name: Download the existing private key
-      ansible.builtin.slurp:
-        src: "{{ item.key_file }}"
-      loop: "{{ bind_tls }}"
-      loop_control:
-        index_var: index
-      register: bind_tls_key_slurped
-
-    - name: Write it into the temp directory
-      ansible.builtin.copy:
-        content: "{{ bind_tls_key_slurped.results[index].content | b64decode }}"
-        dest: "{{ bind_tls_tempdir.path }}/{{ index }}.key.pem"
-        mode: "0600"
-      delegate_to: localhost
-      loop: "{{ bind_tls }}"
-      loop_control:
-        index_var: index
 
 - name: Generate private key(s)
   tags: [tls, privatekey]
   when: not bind_tls_key_file_stat.results[index].stat.exists
-  block:
-    - name: Generate private key(s)
-      community.crypto.openssl_privatekey:
-        owner: "{{ lookup('env', 'USER') }}"
-        path: "{{ bind_tls_tempdir.path }}/{{ index }}.key.pem"
-        type: "{{ item.key_type | default(bind_tls_key_type) }}"
-        size: "{{ item.key_size | default(bind_tls_key_size) }}"
-      register: bind_tls_privatekeys
-      delegate_to: localhost
-      loop: "{{ bind_tls }}"
-      loop_control:
-        index_var: index
-
-    - name: Copy private key(s) to target
-      tags: [tls, privatekey]
-      ansible.builtin.copy:
-        dest: "{{ item.key_file }}"
-        group: "{{ bind_usergroup }}"
-        mode: "0640"
-        src: "{{ bind_tls_privatekeys.results[index].filename }}"
-      loop: "{{ bind_tls }}"
-      loop_control:
-        index_var: index
+  community.crypto.openssl_privatekey:
+    group: "{{ bind_usergroup }}"
+    mode: "0640"
+    path: "{{ item.key_file | default(bind_tls_key_file) }}"
+    type: "{{ item.key_type | default(bind_tls_key_type) }}"
+    size: "{{ item.key_size | default(bind_tls_key_size) }}"
+  register: bind_tls_privatekeys
+  loop: "{{ bind_tls }}"
+  loop_control:
+    index_var: index
 
 - name: Generate CSR
   tags: [tls, csr]
   community.crypto.openssl_csr:
-    path: "{{ bind_tls_tempdir.path }}/{{ index }}.csr.pem"
-    privatekey_path: "{{ bind_tls_tempdir.path }}/{{ index }}.key.pem"
-    common_name: "{{ item.common_name | default(bind_tls_common_name) }}"
-    subject_alt_name: "{{ item.subject_alt_name | default(bind_tls_subject_alt_name) }}"
+    path: "{{ item.csr_file }}"
+    privatekey_path: "{{ item.key_file | default(bind_tls_key_file) }}"
+    common_name: "{{ item.common_name }}"
+    subject_alt_name: "{{ item.subject_alt_name | default([]) }}"
   register: bind_tls_csrs
-  delegate_to: localhost
   loop: "{{ bind_tls }}"
   loop_control:
     index_var: index
+  when: item.common_name is defined
