--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -10,3 +10,4 @@ bind_rpz_directory: /var/named/dynamic
 bind_rpz_scripts_directory: /etc/named
 bind_secondary_zone_directory: /var/named/slaves
 bind_tls_dhparam_file: /etc/named/dhparam.pem
+bind_tls_key_file: /etc/named/cert.key
