--- a/vars/Suse.yml
+++ b/vars/Suse.yml
@@ -10,3 +10,4 @@ bind_rpz_directory: /var/lib/named/dyn
 bind_rpz_scripts_directory: /var/lib/named/scripts
 bind_secondary_zone_directory: /var/lib/named/slave
 bind_tls_dhparam_file: /etc/named.d/dhparam.pem
+bind_tls_key_file: /etc/named.d/cert.key
